# cosmos-prefer2.5

./: .gitignore  INSTALLATION.md  README.md  activate.fish  activate.sh  download_checkpoints.py  download_example_data.py  pyproject.toml  requirements.txt  setup.sh  setup_environment.sh  test_all_cases.py  test_examples.py  test_setup.py
cosmos_prefer2/: __init__.py
cosmos_prefer2/examples/: 01_basic_predict.py  01_predict_text2world.py  02_basic_transfer.py
cosmos_prefer2/inference/: __init__.py  predict_helpers.py  predict_pipeline.py  transfer_helpers.py  transfer_pipeline.py
cosmos_prefer2/utils/: __init__.py  environment.py  io.py
data/inputs/predict2.5/image2world/: prompt.txt
data/inputs/predict2.5/video2world/: prompt.txt
data/inputs/transfer2.5/real2real/: prompt.txt
data/inputs/transfer2.5/sim2real/: prompt.txt
